--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,9 @@
 .footer {
-    height: 80px;
+    height: 60px;
     width: 100%;
-    margin-top: 0;
-    padding-top: 10px;
+    margin-top: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-color: #000000;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
