--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -34,6 +34,11 @@
     padding: 5px;
     color: #000;
     
-    
+}
+
+.active-link {
+    font-weight: "bold";
+    text-decoration: "underline";
+    color: "green";
 }
 
