--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding-bottom: 120px;
     display: flex;
-    background-color: #e61515;
+    background-image: url("../../Assets/home-hero.png");
     flex-direction: column;
     align-items: center;
     justify-content: center;
