--- a/src/pages/Vans/Vans.module.css
+++ b/src/pages/Vans/Vans.module.css
@@ -1,13 +1,35 @@
 .van-list-container {
     display: flex;
     max-width: 100vw;
-    flex-direction: row;
+    flex-direction: column;
+    align-content: center;
     flex-wrap: wrap;
+    justify-content: center;
+    font-size: 2rem;
+    color: #000;
+}
+
+
+.van-list-container h1 {
+    text-align: center;
+}
+
+.van-type-query-button {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
 }
 
-.van-list-container {
-    font-size: 2rem;
+.van-type-query-button button {
+    padding: 5px;
+    margin-left: 20px;
+    width: 90px;
+    border-style: hidden;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .van-list {
@@ -34,6 +56,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     text-decoration: none; 
+    color: #000;
 }
 
 .van-tile img {
@@ -70,7 +93,7 @@
     width: 150px ;
     height: 30px;
     border: 1px solid transparent;
-    background-color: aqua;
+   /* background-color: aqua;*/
     text-align: center;
     padding: 5px;
     border-radius: 5px;
@@ -86,14 +109,14 @@ i {
 
 /******* Botton ******/
 
-.simple {
-    background-color: chocolate;
+.van-type.simple:hover, .van-type.simple.selected   {
+    background-color: rgb(218, 112, 214);
 }
 
-.rugged {
-    background-color: darkgreen;
+.van-type.rugged:hover, .van-type.rugged.selected  {
+    background-color: rgb(0, 128, 0);
 }
 
-.luxury {
+.van-type.luxury:hover, .van-type.luxury.selected  {
     background-color: aqua;
 }
